slight fix to links showing up under the overflow.

--- a/static/css/union.css
+++ b/static/css/union.css
@@ -120,7 +120,7 @@ body {
 /* ======= ======= NAVBAR ======= ======= */
 /* ======= ======= ====== ======= ======= */
 .navbar {
-    max-height: 70px;
+    max-height: 65px;
 
     margin: 0px 0px 0px 65px;
     padding: 0;
